# test-corrosion

./: CMakeLists.txt  Cargo.toml
.cargo/: config.toml
parallel/: CMakeLists.txt
parallel/src/: main.cpp
simple/: Cargo.toml
